syntax = "proto3";

                 package tbClreDedCo;
service TbClreDedCoService {
 rpc createTbClreDedCo (TbClreDedCoCreateInput) returns (TbClreDedCo) {}
rpc tbClreDedCos (findManyParams) returns (stream TbClreDedCo) {}
rpc tbClreDedCo (TbClreDedCoWhereUniqueInput) returns (TbClreDedCo) {}
rpc updateTbClreDedCo (TbClreDedCoUpdateInput) returns (TbClreDedCo) {}
rpc deleteTbClreDedCo (TbClreDedCoWhereUniqueInput) returns (TbClreDedCo) {} 
 }
message TbClreDedCoCreateInput {
string createdAt = 1;
string dcerAddr = 2;
string dcerCoNm = 3;
string delYn = 4;
string exppnAddr = 5;
string exppnCoNm = 6;
string exppnEml = 7;
string frstRegstId = 8;
string frstRgsrDttm = 9;
string id = 10;
string imppnAddr = 11;
string imppnCoNm = 12;
string lastChgDttm = 13;
string lastChprId = 14;
int32 mdfyDgcnt = 15;
string reffNo = 16;
string txprAddr = 17;
string txprCoNm = 18;
string txprEml = 19;
string txprTlphNo = 20;
string updatedAt = 21;
};
message TbClreDedCo {
string createdAt = 1;
string dcerAddr = 2;
string dcerCoNm = 3;
string delYn = 4;
string exppnAddr = 5;
string exppnCoNm = 6;
string exppnEml = 7;
string frstRegstId = 8;
string frstRgsrDttm = 9;
string id = 10;
string imppnAddr = 11;
string imppnCoNm = 12;
string lastChgDttm = 13;
string lastChprId = 14;
int32 mdfyDgcnt = 15;
string reffNo = 16;
string txprAddr = 17;
string txprCoNm = 18;
string txprEml = 19;
string txprTlphNo = 20;
string updatedAt = 21;
};
message TbClreDedCoWhereUniqueInput {
string createdAt = 1;
string dcerAddr = 2;
string dcerCoNm = 3;
string delYn = 4;
string exppnAddr = 5;
string exppnCoNm = 6;
string exppnEml = 7;
string frstRegstId = 8;
string frstRgsrDttm = 9;
string id = 10;
string imppnAddr = 11;
string imppnCoNm = 12;
string lastChgDttm = 13;
string lastChprId = 14;
int32 mdfyDgcnt = 15;
string reffNo = 16;
string txprAddr = 17;
string txprCoNm = 18;
string txprEml = 19;
string txprTlphNo = 20;
string updatedAt = 21;
};
message TbClreDedCoUpdateInput {
string createdAt = 1;
string dcerAddr = 2;
string dcerCoNm = 3;
string delYn = 4;
string exppnAddr = 5;
string exppnCoNm = 6;
string exppnEml = 7;
string frstRegstId = 8;
string frstRgsrDttm = 9;
string id = 10;
string imppnAddr = 11;
string imppnCoNm = 12;
string lastChgDttm = 13;
string lastChprId = 14;
int32 mdfyDgcnt = 15;
string reffNo = 16;
string txprAddr = 17;
string txprCoNm = 18;
string txprEml = 19;
string txprTlphNo = 20;
string updatedAt = 21;
};
message findManyParams {

};